WIP: add LibraryModulesSchemaFactory
Change-Id: I014d799270a46f9df5ce0e6fc620824d11ef2cb1
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>