@@ -9,57 +9,55 @@ package org.opendaylight.netconf.sal.connect.netconf;
 
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.util.Collections;
 import java.util.Map;
+import java.util.ServiceLoader;
+import org.junit.BeforeClass;
 import org.junit.Test;
 import org.opendaylight.yangtools.yang.model.repo.api.SourceIdentifier;
+import org.opendaylight.yangtools.yang.parser.api.YangParserFactory;
 
 public class LibraryModulesSchemasTest {
+    private static LibraryModulesSchemaFactory FACTORY;
+
+    @BeforeClass
+    public static void beforeClass() throws Exception {
+        FACTORY = new LibraryModulesSchemaFactory(
+            ServiceLoader.load(YangParserFactory.class).findFirst().orElseThrow());
+    }
 
     @Test
     public void testCreate() throws Exception {
         // test create from xml
-        LibraryModulesSchemas libraryModulesSchemas =
-                LibraryModulesSchemas.create(getClass().getResource("/yang-library.xml").toString());
-
-        verifySchemas(libraryModulesSchemas);
+        verifySchemas(FACTORY.createLibraryModulesSchema(getClass().getResource("/yang-library.xml").toString()));
 
         // test create from json
-        LibraryModulesSchemas libraryModuleSchemas =
-                LibraryModulesSchemas.create(getClass().getResource("/yang-library.json").toString());
-
-        verifySchemas(libraryModulesSchemas);
+        verifySchemas(FACTORY.createLibraryModulesSchema(getClass().getResource("/yang-library.json").toString()));
     }
 
     private static void verifySchemas(final LibraryModulesSchemas libraryModulesSchemas) throws MalformedURLException {
-        final Map<SourceIdentifier, URL> resolvedModulesSchema = libraryModulesSchemas.getAvailableModels();
-        assertThat(resolvedModulesSchema.size(), is(3));
+        final var resolvedModulesSchema = libraryModulesSchemas.getAvailableModels();
+        assertEquals(3, resolvedModulesSchema.size());
 
-        assertTrue(resolvedModulesSchema.containsKey(new SourceIdentifier("module-with-revision", "2014-04-08")));
-        assertThat(resolvedModulesSchema.get(new SourceIdentifier("module-with-revision", "2014-04-08")),
-                is(new URL("http://localhost:8181/yanglib/schemas/module-with-revision/2014-04-08")));
-
-        assertTrue(resolvedModulesSchema.containsKey(
-                new SourceIdentifier("another-module-with-revision", "2013-10-21")));
-        assertThat(resolvedModulesSchema.get(new SourceIdentifier("another-module-with-revision", "2013-10-21")),
-                is(new URL("http://localhost:8181/yanglib/schemas/another-module-with-revision/2013-10-21")));
-
-        assertTrue(resolvedModulesSchema.containsKey(new SourceIdentifier("module-without-revision")));
-        assertThat(resolvedModulesSchema.get(new SourceIdentifier("module-without-revision")),
-                is(new URL("http://localhost:8181/yanglib/schemas/module-without-revision/")));
+        assertEquals(new URL("http://localhost:8181/yanglib/schemas/module-with-revision/2014-04-08"),
+            resolvedModulesSchema.get(new SourceIdentifier("module-with-revision", "2014-04-08")));
+        assertEquals(new URL("http://localhost:8181/yanglib/schemas/another-module-with-revision/2013-10-21"),
+            resolvedModulesSchema.get(new SourceIdentifier("another-module-with-revision", "2013-10-21")));
+        assertEquals(new URL("http://localhost:8181/yanglib/schemas/module-without-revision/"),
+            resolvedModulesSchema.get(new SourceIdentifier("module-without-revision")));
     }
 
     @Test
     public void testCreateInvalidModulesEntries() throws Exception {
-        LibraryModulesSchemas libraryModulesSchemas =
-                LibraryModulesSchemas.create(getClass().getResource("/yang-library-fail.xml").toString());
+        var libraryModulesSchemas =
+            FACTORY.createLibraryModulesSchema(getClass().getResource("/yang-library-fail.xml").toString());
 
-        final Map<SourceIdentifier, URL> resolvedModulesSchema = libraryModulesSchemas.getAvailableModels();
+        final var resolvedModulesSchema = libraryModulesSchemas.getAvailableModels();
         assertThat(resolvedModulesSchema.size(), is(1));
 
         assertFalse(resolvedModulesSchema.containsKey(new SourceIdentifier("module-with-bad-url")));
@@ -72,8 +70,8 @@ public class LibraryModulesSchemasTest {
     @Test
     public void testCreateFromInvalidAll() throws Exception {
         // test bad yang lib url
-        LibraryModulesSchemas libraryModulesSchemas = LibraryModulesSchemas.create("ObviouslyBadUrl");
-        assertThat(libraryModulesSchemas.getAvailableModels(), is(Collections.emptyMap()));
+        var libraryModulesSchemas = FACTORY.createLibraryModulesSchema("ObviouslyBadUrl");
+        assertEquals(Map.of(), libraryModulesSchemas.getAvailableModels());
 
         // TODO test also fail on json and xml parsing. But can we fail not on runtime exceptions?
     }
